<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutEdik"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/ibImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_pause"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="33dp"
        android:text="@string/_edik"
        android:layout_marginTop="96dp"
        style="@style/headerText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ibImageButton" />

    <LinearLayout
        android:id="@+id/mcMainContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="33dp"
        android:layout_marginTop="80dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvQuestion">


        <LinearLayout
            android:id="@+id/container.firstAnswer"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@drawable/shape_rounded_containers"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/number1"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginVertical="15dp"
                android:layout_marginStart="12dp"
                android:background="@drawable/shape_rounded_variants"
                android:gravity="center"
                android:text="1"
                android:textColor="#888992"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/faFirstAnswer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:text="@string/_major"
                style="@style/textAfterNum"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/container.secondAnswer"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/shape_rounded_containers"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/number2"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginVertical="15dp"
                android:layout_marginStart="12dp"
                android:background="@drawable/shape_rounded_variants"
                android:gravity="center"
                android:text="2"
                android:textColor="#888992"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/saSecondAnswer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                style="@style/textAfterNum"
                android:text="@string/_lavelas"
                android:textColor="#888992" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/container.thirdAnswer"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/shape_rounded_containers"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/number3"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginVertical="15dp"
                android:layout_marginStart="12dp"
                android:background="@drawable/shape_rounded_variants"
                android:gravity="center"
                android:text="@string/_3"
                android:textColor="#888992"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/taThirdAnswer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:text="@string/_buisnesman"
                style="@style/textAfterNum"
                android:textColor="#888992" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/container.fourthAnswer"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/shape_rounded_containers"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/number4"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginVertical="15dp"
                android:layout_marginStart="12dp"
                android:background="@drawable/shape_rounded_variants"
                android:gravity="center"
                android:text="4"
                android:textColor="#888992"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:text="@string/_drug"
                style="@style/textAfterNum"/>
        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/btnSkip"
        android:layout_width="311dp"
        android:layout_height="58dp"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="#2574FF"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="30dp"
        android:text="skip"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ResultContainer"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/finger"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="17dp"
            android:background="@color/white"
            android:src="@drawable/ic_icon"
            app:layout_constraintStart_toStartOf="@id/ResultContainer"
            app:layout_constraintTop_toTopOf="@id/ResultContainer" />

        <TextView
        android:id="@+id/correct_wrong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_correct"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/finger"
        app:layout_constraintTop_toTopOf="@id/finger"
        app:layout_constraintStart_toEndOf="@id/finger"
        android:layout_marginStart="20dp"/>

    <Button
        android:id="@+id/btnContinue"
        android:layout_width="311dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/_continue"
        app:layout_constraintBottom_toBottomOf="@id/ResultContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/finger" />



</androidx.constraintlayout.widget.ConstraintLayout>